<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.popularmovies.ui.detailsscreen.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster_content_description"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/title_label"
                style="@style/Label"
                android:text="@string/title_label" />

            <TextView
                android:id="@+id/title_data"
                style="@style/Data" />

            <TextView
                android:id="@+id/release_date_label"
                style="@style/Label"
                android:text="@string/release_date_label" />

            <TextView
                android:id="@+id/release_date_data"
                style="@style/Data" />

            <TextView
                android:id="@+id/user_rating_label"
                style="@style/Label"
                android:text="@string/user_rating_label" />

            <TextView
                android:id="@+id/user_rating_data"
                style="@style/Data" />

            <TextView
                android:id="@+id/plot_synopsis_label"
                style="@style/Label"
                android:text="@string/plot_synopsis_label" />

            <TextView
                android:id="@+id/plot_synopsis_data"
                style="@style/Data" />

        </LinearLayout>

    </ScrollView>

</layout>